@@ -1,3 +1,15 @@
+Fri Sep 24 14:14:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Contexts/Extension/Extension_Context_T.h:
+        * ciao/Contexts/Extension/Extension_Context_T.cpp:
+        * ciao/Contexts/Session/Session_Context_T.h:
+        * ciao/Contexts/Session/Session_Context_T.cpp:
+        * ciao/Contexts/Extension/ExtensionContext_T.h:
+        * ciao/Contexts/Extension/ExtensionContext_T.cpp:
+        * ciao/Contexts/Session/Context_Impl_T.h:
+        * ciao/Contexts/Session/Context_Impl_T.cpp:
+          Renamed files and started with extension context and container
+
 Fri Sep 24 13:40:16 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * examples/BasicSP/RepoMan_Usage.html:
